--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <head>
       <link href="https://fonts.googleapis.com/css?family=Meera+Inimai" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <meta charset="utf-8">
     <title>Social Station</title>
