--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="app">
 
     </div>
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
     <script src="/dist/build.js"></script>
   </body>
 </html>
