--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+       <meta name="viewport" content="width=device-width, initial-scale=1">
+
       <link href="https://fonts.googleapis.com/css?family=Meera+Inimai" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
