--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <meta charset="utf-8">
-    <title>Mobile Friendly</title>
+    <title>Mobile Friendly-testing</title>
     <style>
       html,body{
         height:100%;
