optimized navigation ber, mobile view

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 <html lang="en">
   <head>
        <meta name="viewport" content="width=device-width, initial-scale=1">
+       <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/social-station-69cfc.appspot.com/o/web%2Fimages%2FlogoOfficial.png?alt=media&token=79dadc52-28fd-417d-aae1-61c251934ad5">
 
       <link href="https://fonts.googleapis.com/css?family=Meera+Inimai" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <meta charset="utf-8">
-    <title>Mobile Friendly-testing</title>
+    <title>SocialStation.io</title>
     <style>
       html,body{
         height:100%;
