--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <head>
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/social-station-69cfc.appspot.com/o/web%2Fimages%2FlogoOfficial.png?alt=media&token=79dadc52-28fd-417d-aae1-61c251934ad5">
+       <link href="https://fonts.googleapis.com/css?family=Anton|Eater" rel="stylesheet">
 
       <link href="https://fonts.googleapis.com/css?family=Meera+Inimai" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
